--- a/Project_Alin/CSS/input_face.css
+++ b/Project_Alin/CSS/input_face.css
@@ -34,7 +34,8 @@
 }
 
 .input-face-card .camera-icon,
-.input-face-card .folder-icon {
+.input-face-card .folder-icon,
+.input-face-card .file-icon {
   margin-top: 32px;
 }
 
