--- a/Project_Alin/CSS/camera_page.css
+++ b/Project_Alin/CSS/camera_page.css
@@ -81,11 +81,11 @@
 }
 
 .camera-capture-btn {
-  margin-top: 24px;
+  margin-top: 56px; /* sebelumnya 24px, sekarang lebih ke bawah */
   background: none;
   border: none;
-  width: 50px; /* diperbesar */
-  height: 50px; /* diperbesar */
+  width: 50px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -101,7 +101,7 @@
 }
 
 .camera-capture-btn:active {
-  transform: scale(0.88); /* mengecil saat ditekan */
+  transform: scale(0.77); /* mengecil saat ditekan */
 }
 
 .camera-capture-btn:active img {
